--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Página de Mateo 6-2</title>
   <style>
+    /* ================== Base / Matrix / Layout ================== */
     body {
       margin: 0;
       height: 100vh;
@@ -46,14 +47,8 @@
                  blink 0.7s infinite;
     }
 
-    @keyframes typing {
-      from { width: 0; }
-      to { width: 25ch; }
-    }
-
-    @keyframes blink {
-      50% { border-color: transparent; }
-    }
+    @keyframes typing { from { width: 0; } to { width: 25ch; } }
+    @keyframes blink { 50% { border-color: transparent; } }
 
     /* ================== BOTÓN ================== */
     .download-btn {
@@ -117,60 +112,78 @@
       font-size: 1.5rem;
     }
 
-    /* ================== MANO / DEDOS ANIMADOS (reemplaza la pirámide) ================== */
+    /* ================= MANO / DEDOS (ESTRECHA, tamaño parecido a la pirámide) ================= */
     .hand-loader {
       --skin-color: #E4C560;
       --tap-speed: 0.6s;
-      --tap-stagger: 0.1s;
+      --tap-stagger: 0.09s;
       position: relative;
-      width: 150px; /* tamaño por defecto para la carga */
-      height: 100px;
+      width: 110px;   /* ancho del conjunto (más cercano a la pirámide) */
+      height: 80px;
       display: flex;
       justify-content: center;
       align-items: center;
       margin-top: 20px;
     }
 
-    /* Sombra del conjunto (opcional) */
     .hand-loader:before {
       content: '';
       position: absolute;
-      width: 140%;
-      height: 30%;
-      bottom: -10%;
+      width: 120%;
+      height: 22%;
+      bottom: -8%;
       left: 50%;
       transform: translateX(-50%);
-      background: rgba(0,0,0,0.4);
-      filter: blur(10px);
+      background: rgba(0,0,0,0.35);
+      filter: blur(8px);
       border-radius: 50%;
       z-index: 0;
     }
 
+    /* palma y estructura */
     .🤚 {
       --skin-color: var(--skin-color);
       --tap-speed: var(--tap-speed);
       --tap-stagger: var(--tap-stagger);
       position: relative;
-      width: 80px;
-      height: 60px;
+      width: 64px;   /* más estrecha */
+      height: 48px;
       margin: 0 auto;
-      z-index: 1;
+      z-index: 2;
     }
 
+    /* sombra/reflejo (ajustada) */
     .🤚:before {
       content: '';
       display: block;
-      width: 180%;
-      height: 75%;
+      width: 160%;
+      height: 65%;
       position: absolute;
-      top: 70%;
-      right: 20%;
-      background-color: black;
-      border-radius: 40px 10px;
-      filter: blur(10px);
-      opacity: 0.3;
+      top: 68%;
+      left: -10%;
+      background-color: rgba(0,0,0,0.5);
+      border-radius: 30px 8px;
+      filter: blur(8px);
+      opacity: 0.28;
+      z-index: 0;
     }
 
+    /* muñeca (más estrecha) */
+    .🤚:after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 26%;
+      left: 50%;
+      bottom: -20%;
+      transform: translateX(-50%);
+      background: var(--skin-color);
+      border-radius: 18px;
+      box-shadow: inset 0 -3px rgba(0,0,0,0.06);
+      z-index: 1;
+    }
+
+    /* palma */
     .🌴 {
       display: block;
       width: 100%;
@@ -179,104 +192,106 @@
       top: 0;
       left: 0;
       background-color: var(--skin-color);
-      border-radius: 10px 40px;
+      border-radius: 8px 34px;
+      z-index: 2;
     }
 
+    /* pulgar (ajustado a la palma estrecha) */
     .👍 {
       position: absolute;
-      width: 120%;
-      height: 38px;
+      width: 105%;
+      height: 30px;
       background-color: var(--skin-color);
-      bottom: -18%;
-      right: 1%;
-      transform-origin: calc(100% - 20px) 20px;
-      transform: rotate(-20deg);
-      border-radius: 30px 20px 20px 10px;
-      border-bottom: 2px solid rgba(0, 0, 0, 0.1);
-      border-left: 2px solid rgba(0, 0, 0, 0.1);
+      bottom: 8%;
+      right: -6%;
+      transform-origin: calc(100% - 14px) 16px;
+      transform: rotate(-22deg);
+      border-radius: 28px 18px 18px 8px;
+      border-bottom: 2px solid rgba(0, 0, 0, 0.12);
+      border-left: 2px solid rgba(0, 0, 0, 0.08);
+      z-index: 3;
     }
 
     .👍:after {
       width: 20%;
       height: 60%;
       content: '';
-      background-color: rgba(255, 255, 255, 0.3);
+      background-color: rgba(255, 255, 255, 0.28);
       position: absolute;
-      bottom: -8%;
+      bottom: -6%;
       left: 5px;
       border-radius: 60% 10% 10% 30%;
       border-right: 2px solid rgba(0, 0, 0, 0.05);
+      z-index: 4;
     }
 
+    /* dedos (estrechos y más compactos) */
     .👉 {
       position: absolute;
-      width: 80%;
-      height: 35px;
+      width: 58%;
+      height: 22px;
       background-color: var(--skin-color);
-      bottom: 32%;
-      right: 64%;
-      transform-origin: 100% 20px;
+      bottom: 34%;
+      right: 14%;
+      transform-origin: 100% 18px;
       animation-duration: calc(var(--tap-speed) * 2);
       animation-timing-function: ease-in-out;
       animation-iteration-count: infinite;
-      transform: rotate(10deg);
+      transform: rotate(12deg);
+      border-radius: 14px;
+      z-index: 3;
     }
 
     .👉:before {
       content: '';
       position: absolute;
-      width: 140%;
-      height: 30px;
+      width: 110%;
+      height: 20px;
       background-color: var(--skin-color);
-      bottom: 8%;
-      right: 65%;
-      transform-origin: calc(100% - 20px) 20px;
-      transform: rotate(-60deg);
-      border-radius: 20px;
+      bottom: 6%;
+      right: 66%;
+      transform-origin: calc(100% - 18px) 18px;
+      transform: rotate(-56deg);
+      border-radius: 18px;
     }
 
-    .👉:nth-child(1) {
+    /* delays para el efecto cascade */
+    .👉:nth-of-type(1) {
       animation-delay: 0;
-      filter: brightness(70%);
+      filter: brightness(72%);
       animation-name: tap-upper-1;
     }
-
-    .👉:nth-child(2) {
+    .👉:nth-of-type(2) {
       animation-delay: var(--tap-stagger);
-      filter: brightness(80%);
+      filter: brightness(82%);
       animation-name: tap-upper-2;
     }
-
-    .👉:nth-child(3) {
+    .👉:nth-of-type(3) {
       animation-delay: calc(var(--tap-stagger) * 2);
-      filter: brightness(90%);
+      filter: brightness(92%);
       animation-name: tap-upper-3;
     }
-
-    .👉:nth-child(4) {
+    .👉:nth-of-type(4) {
       animation-delay: calc(var(--tap-stagger) * 3);
       filter: brightness(100%);
       animation-name: tap-upper-4;
     }
 
     @keyframes tap-upper-1 {
-      0%, 50%, 100% { transform: rotate(10deg) scale(0.4); }
-      40% { transform: rotate(50deg) scale(0.4); }
+      0%,50%,100% { transform: rotate(12deg) scale(0.45); }
+      40% { transform: rotate(52deg) scale(0.45); }
     }
-
     @keyframes tap-upper-2 {
-      0%, 50%, 100% { transform: rotate(10deg) scale(0.6); }
-      40% { transform: rotate(50deg) scale(0.6); }
+      0%,50%,100% { transform: rotate(12deg) scale(0.62); }
+      40% { transform: rotate(52deg) scale(0.62); }
     }
-
     @keyframes tap-upper-3 {
-      0%, 50%, 100% { transform: rotate(10deg) scale(0.8); }
-      40% { transform: rotate(50deg) scale(0.8); }
+      0%,50%,100% { transform: rotate(12deg) scale(0.8); }
+      40% { transform: rotate(52deg) scale(0.8); }
     }
-
     @keyframes tap-upper-4 {
-      0%, 50%, 100% { transform: rotate(10deg) scale(1); }
-      40% { transform: rotate(50deg) scale(1); }
+      0%,50%,100% { transform: rotate(12deg) scale(1); }
+      40% { transform: rotate(52deg) scale(1); }
     }
 
     /* versión pequeña para la mano que aparece debajo del botón */
@@ -335,14 +350,17 @@
     const canvas = document.getElementById("matrix");
     const ctx = canvas.getContext("2d");
 
-    canvas.height = window.innerHeight;
-    canvas.width = window.innerWidth;
+    function resizeCanvas() {
+      canvas.height = window.innerHeight;
+      canvas.width = window.innerWidth;
+    }
+    resizeCanvas();
 
     const letters = "01";
     const fontSize = 16;
-    const columns = canvas.width / fontSize;
+    let columns = Math.floor(canvas.width / fontSize);
 
-    const drops = [];
+    let drops = [];
     for (let x = 0; x < columns; x++) drops[x] = 1;
 
     function draw() {
@@ -363,12 +381,14 @@
       }
     }
 
-    setInterval(draw, 35);
+    let matrixInterval = setInterval(draw, 35);
 
     // Ajustar canvas en resize
     window.addEventListener("resize", () => {
-      canvas.height = window.innerHeight;
-      canvas.width = window.innerWidth;
+      resizeCanvas();
+      // recalcular columnas y drops
+      columns = Math.floor(canvas.width / fontSize);
+      drops = Array(columns).fill(1);
     });
 
     // ============= SISTEMA DE CARGA =============
