--- a/index.html
+++ b/index.html
@@ -2,370 +2,112 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Página de Luis - Interactiva</title>
+<title>Página de Luis</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-/* === VARIABLES GENERALES === */
-:root {
-    --color-principal: #00E5FF;
-    --color-secundario: #FF00E5;
-    --color-terciario: #E5FF00;
-    --color-fondo: #000000;
-    --color-texto-claro: #FFFFFF;
-    --color-texto-oscuro: #1A1A1A;
-}
-
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
 body{
     margin:0;
     font-family:'Segoe UI',sans-serif;
-    background-color: var(--color-fondo);
+    background:linear-gradient(180deg,#0f2027,#203a43,#2c5364);
     overflow-x:hidden;
-    color:var(--color-texto-claro);
-    position: relative;
-    min-height: 100vh;
+    color:#333;
 }
-
-/* === ELEMENTOS INTERACTIVOS Y ANIMADOS === */
-.contenedor-elementos {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    z-index: 0;
+.estrellas{
+    position:fixed;
+    width:100%;
+    height:100%;
+    pointer-events:none;
 }
-
-.estrella-interactiva {
-    position: absolute;
-    background-color: transparent;
-    border: 1px solid var(--color-principal);
-    border-radius: 50%;
-    pointer-events: none;
-    animation: brillar-estrella ease-in-out infinite alternate, mover-estrella linear infinite;
+.estrella{
+    position:absolute;
+    width:2px;
+    height:2px;
+    background:white;
+    opacity:.8;
+    animation:caer linear infinite;
 }
-
-.estrella-interactiva::before,
-.estrella-interactiva::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border: inherit;
-    border-radius: inherit;
-    transform: rotate(45deg);
+@keyframes caer{
+    from{transform:translateY(-10px)}
+    to{transform:translateY(110vh)}
 }
-
-@keyframes brillar-estrella {
-    from { 
-        box-shadow: 0 0 2px var(--color-principal); 
-        opacity: 0.5;
-        transform: scale(0.5);
-    }
-    to { 
-        box-shadow: 0 0 15px var(--color-principal), 0 0 30px var(--color-principal); 
-        opacity: 1;
-        transform: scale(1.2);
-    }
-}
-
-@keyframes mover-estrella {
-    0% { transform: translate(0, 0); }
-    25% { transform: translate(10px, -5px); }
-    50% { transform: translate(0, -10px); }
-    75% { transform: translate(-10px, -5px); }
-    100% { transform: translate(0, 0); }
-}
-
-.particula {
-    position: absolute;
-    width: 2px;
-    height: 2px;
-    border-radius: 50%;
-    opacity: 0.8;
-    animation: desaparecer-particula linear forwards;
-}
-
-@keyframes desaparecer-particula {
-    to { 
-        transform: translate(var(--dir-x), var(--dir-y)); 
-        opacity: 0;
-    }
-}
-
-/* === ONDAS DE FONDO ANIMADAS === */
-.onda-fondo {
-    position: fixed;
-    width: 200vw;
-    height: 200vw;
-    border-radius: 45%;
-    background: radial-gradient(circle, rgba(0,229,255,0.05) 0%, rgba(0,0,0,0) 70%);
-    animation: rotar-onda 60s linear infinite;
-    z-index: -1;
-}
-
-.onda-fondo:nth-child(2) {
-    background: radial-gradient(circle, rgba(255,0,229,0.05) 0%, rgba(0,0,0,0) 70%);
-    animation-duration: 80s;
-    animation-direction: reverse;
-}
-
-.onda-fondo:nth-child(3) {
-    background: radial-gradient(circle, rgba(229,255,0,0.05) 0%, rgba(0,0,0,0) 70%);
-    animation-duration: 100s;
-}
-
-@keyframes rotar-onda {
-    from { transform: rotate(0deg) translateY(20vh); }
-    to { transform: rotate(360deg) translateY(20vh); }
-}
-
-/* === TÍTULO PRINCIPAL ANIMADO === */
 h1{
     text-align:center;
-    margin:30px 10px;
-    font-size: clamp(2rem, 6vw, 3rem);
-    position: relative;
-    z-index: 1;
-    background: linear-gradient(90deg, var(--color-principal), var(--color-secundario), var(--color-terciario), var(--color-principal));
-    background-size: 300% 100%;
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-    animation: deslizar-gradiente 8s ease infinite;
+    color:white;
+    margin:20px;
 }
-
-@keyframes deslizar-gradiente {
-    0% { background-position: 0% 50%; }
-    50% { background-position: 100% 50%; }
-    100% { background-position: 0% 50%; }
-}
-
-/* === DASHBOARD RESPONSIVO Y ANIMADO === */
 .dashboard{
-    max-width:1200px;
-    margin:0 auto 40px;
+    max-width:1000px;
+    margin:auto;
     display:grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 20px;
-    padding:0 20px;
-    position: relative;
-    z-index: 1;
+    grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+    gap:15px;
 }
-
 .card{
-    background: rgba(255, 255, 255, 0.05);
-    backdrop-filter: blur(10px);
-    padding: 25px;
-    border-radius: 15px;
+    background:white;
+    padding:20px;
+    border-radius:15px;
     text-align:center;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    transition: all .4s ease;
-    transform: translateY(20px);
-    opacity: 0;
-    animation: aparecer-card 0.8s forwards;
+    box-shadow:0 10px 25px rgba(0,0,0,.3);
 }
-
-.card:nth-child(1) { animation-delay: 0.2s; }
-.card:nth-child(2) { animation-delay: 0.4s; }
-.card:nth-child(3) { animation-delay: 0.6s; }
-
-@keyframes aparecer-card {
-    to { 
-        transform: translateY(0); 
-        opacity: 1;
-    }
-}
-
-.card:hover{
-    transform: translateY(-8px) scale(1.02);
-    border-color: var(--color-principal);
-    box-shadow: 0 0 25px rgba(0, 229, 255, 0.3);
-}
-
-.card h3{
-    margin:0;
-    font-size: clamp(1rem, 2vw, 1.2rem);
-    color: rgba(255, 255, 255, 0.7);
-    text-transform:uppercase;
-    letter-spacing:.5px;
-    margin-bottom: 10px;
-}
-
-.card p{
-    font-size: clamp(1.8rem, 4vw, 2.5rem);
-    font-weight:bold;
-    background: linear-gradient(90deg, var(--color-principal), var(--color-secundario));
-    background-size: 200% 100%;
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-    animation: deslizar-gradiente 4s ease infinite;
-}
-
-/* === CONTENEDOR PRINCIPAL === */
+.card h3{margin:0;font-size:14px;color:#555}
+.card p{font-size:22px;font-weight:bold;margin-top:10px}
 .contenedor{
-    max-width:1200px;
-    margin:0 auto 60px;
-    background: rgba(255, 255, 255, 0.03);
-    backdrop-filter: blur(15px);
-    padding: 30px;
-    border-radius: 20px;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    position: relative;
-    z-index: 1;
-    transform: translateY(30px);
-    opacity: 0;
-    animation: aparecer-card 0.8s forwards 0.8s;
+    max-width:1000px;
+    margin:30px auto;
+    background:white;
+    padding:30px;
+    border-radius:20px;
 }
-
-label{
-    font-weight:bold;
-    color: rgba(255, 255, 255, 0.8);
-    display:block;
-    margin-bottom:8px;
-    font-size: clamp(0.9rem, 2vw, 1.1rem);
-}
-
+label{font-weight:bold}
 input,select{
     width:100%;
-    padding: 12px 15px;
-    margin:5px 0 20px;
+    padding:12px;
+    margin:10px 0 20px;
     border-radius:8px;
-    border:1px solid rgba(255, 255, 255, 0.1);
-    background: rgba(0, 0, 0, 0.5);
-    color: var(--color-texto-claro);
-    font-size: clamp(0.9rem, 2vw, 1.1rem);
-    transition: all .3s ease;
+    border:1px solid #ccc;
 }
-
-input:focus,select:focus{
-    outline:none;
-    border-color: var(--color-principal);
-    box-shadow:0 0 15px rgba(0, 229, 255, 0.2);
-}
-
-/* === BOTONES ANIMADOS === */
 .botones{
     display:grid;
-    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-    gap: 20px;
-    margin-bottom: 30px;
+    grid-template-columns:1fr 1fr;
+    gap:15px;
 }
-
 button{
-    padding: 14px;
+    padding:14px;
     border:none;
     border-radius:8px;
     cursor:pointer;
-    font-size: clamp(0.9rem, 2vw, 1.1rem);
-    font-weight:bold;
-    transition: all .3s ease;
-    position: relative;
-    overflow: hidden;
-    background: linear-gradient(45deg, var(--color-principal), var(--color-secundario));
-    color: var(--color-texto-oscuro);
-    pointer-events: auto;
+    font-size:15px;
 }
-
-button::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
-    animation: brillo-boton 3s infinite linear;
-}
-
-button:hover{
-    transform: translateY(-3px) scale(1.03);
-    box-shadow: 0 0 30px rgba(0, 229, 255, 0.5);
-}
-
-button.excel {
-    background: linear-gradient(45deg, var(--color-terciario), var(--color-secundario));
-}
-
-@keyframes brillo-boton {
-    100% { left: 100%; }
-}
-
-/* === TABLA RESPONSIVA Y ANIMADA === */
+.agregar{background:#27ae60;color:white}
+.excel{background:#16a085;color:white}
 table{
     width:100%;
     border-collapse:collapse;
-    margin-top: 25px;
-    border-radius:10px;
-    overflow:hidden;
-    display: block;
-    overflow-x: auto;
-    max-width: 100%;
-    border: 1px solid rgba(255, 255, 255, 0.1);
+    margin-top:25px;
 }
-
 th,td{
-    padding: 12px;
-    border-bottom:1px solid rgba(255, 255, 255, 0.05);
+    padding:12px;
+    border-bottom:1px solid #ddd;
     text-align:center;
-    font-size: clamp(0.8rem, 2vw, 1rem);
 }
-
 th{
-    background: rgba(0, 0, 0, 0.7);
-    color: var(--color-texto-claro);
-    font-weight:bold;
-    text-transform:uppercase;
-    letter-spacing:.5px;
-    white-space: nowrap;
+    background:#2c3e50;
+    color:white;
 }
-
-tr:hover{
-    background: rgba(0, 229, 255, 0.1);
-    transform: scale(1.01);
-    transition: transform 0.2s ease;
-}
-
 .acciones button{
-    padding: 6px 10px;
+    padding:6px 10px;
     margin:0 3px;
     border-radius:5px;
-    font-size: clamp(0.7rem, 1.5vw, 0.9rem);
-    background: linear-gradient(45deg, var(--color-terciario), var(--color-texto-oscuro));
 }
-
-.acciones button.borrar {
-    background: linear-gradient(45deg, var(--color-secundario), var(--color-texto-oscuro));
-    color: var(--color-texto-claro);
-}
-
-/* === AJUSTES PARA PANTALLAS PEQUEÑAS === */
-@media screen and (max-width: 480px) {
-    .contenedor {
-        margin:0 15px 60px;
-        padding: 20px;
-    }
-
-    .dashboard {
-        padding:0 15px;
-    }
-}
+.editar{background:#f39c12;color:white}
+.borrar{background:#e74c3c;color:white}
 </style>
 </head>
 
 <body>
 
-<!-- === ELEMENTOS ANIMADOS DE FONDO === -->
-<div class="onda-fondo"></div>
-<div class="onda-fondo"></div>
-<div class="onda-fondo"></div>
-<div class="contenedor-elementos" id="contenedorElementos"></div>
+<div class="estrellas" id="estrellas"></div>
 
 <h1>Página de Luis</h1>
 
@@ -385,57 +127,126 @@ tr:hover{
 </div>
 
 <div class="contenedor">
-    <label>Tipo de Concepto</label>
-    <select id="tipo">
-        <option value="material">Material (IVA 19%)</option>
-        <option value="mano">Mano de Obra (IVA 0%)</option>
-        <option value="servicio">Servicio Profesional (IVA 19%)</option>
-    </select>
 
-    <label>Monto Base ($ COP)</label>
-    <input type="number" id="monto" min="0.01" step="0.01" placeholder="Ingresa el valor sin IVA">
+<label>Tipo</label>
+<select id="tipo">
+    <option value="material">Material (19%)</option>
+    <option value="mano">Mano de obra (0%)</option>
+    <option value="servicio">Servicio (19%)</option>
+</select>
 
-    <div class="botones">
-        <button class="agregar" onclick="agregar()">Agregar Concepto</button>
-        <button class="excel" onclick="exportarExcel()">Exportar a Excel</button>
-    </div>
+<label>Monto base ($ COP)</label>
+<input type="number" id="monto">
 
-    <table>
-        <thead>
-            <tr>
-                <th>Tipo de Concepto</th>
-                <th>Monto Base ($)</th>
-                <th>Valor IVA ($)</th>
-                <th>Total con IVA ($)</th>
-                <th>Acciones</th>
-            </tr>
-        </thead>
-        <tbody id="tabla"></tbody>
-    </table>
+<div class="botones">
+    <button class="agregar" onclick="agregar()">Agregar</button>
+    <button class="excel" onclick="exportarExcel()">Exportar Excel</button>
+</div>
+
+<table>
+<thead>
+<tr>
+    <th>Tipo</th>
+    <th>Base</th>
+    <th>IVA</th>
+    <th>Total</th>
+    <th>Acciones</th>
+</tr>
+</thead>
+<tbody id="tabla"></tbody>
+</table>
+
 </div>
 
 <script>
-// === FUNCIONALIDAD INTERACTIVA ===
-const contenedorElementos = document.getElementById('contenedorElementos');
-const colores = ['var(--color-principal)', 'var(--color-secundario)', 'var(--color-terciario)'];
+let datos = JSON.parse(localStorage.getItem("cuentasLuis")) || [];
 
-// Crear estrellas iniciales
-function crearEstrellasIniciales() {
-    for(let i=0; i<50; i++) {
-        crearEstrella(
-            Math.random() * window.innerWidth,
-            Math.random() * window.innerHeight,
-            colores[Math.floor(Math.random() * colores.length)]
-        );
-    }
+function f(n){ return n.toLocaleString('es-CO'); }
+
+function guardar(){
+    localStorage.setItem("cuentasLuis", JSON.stringify(datos));
+    recalcular();
 }
 
-// Crear estrella en posición específica
-function crearEstrella(x, y, color) {
-    const estrella = document.createElement('div');
-    estrella.className = 'estrella-interactiva';
-    estrella.style.left = x + 'px';
-    estrella.style.top = y + 'px';
-    estrella.style.width = (3 + Math.random() * 8) + 'px';
-    estrella.style.height = estrella.style.width;
-    estrella.style.borderColor = color
+function recalcular(){
+    let b=0,i=0,t=0;
+    datos.forEach(d=>{
+        b+=d.base;
+        i+=d.iva;
+        t+=d.total;
+    });
+    totalBase.innerText="$ "+f(b);
+    totalIVA.innerText="$ "+f(i);
+    totalGeneral.innerText="$ "+f(t);
+    render();
+}
+
+function render(){
+    tabla.innerHTML="";
+    datos.forEach((d,idx)=>{
+        tabla.innerHTML+=`
+        <tr>
+            <td>${d.tipo}</td>
+            <td>$ ${f(d.base)}</td>
+            <td>$ ${f(d.iva)}</td>
+            <td>$ ${f(d.total)}</td>
+            <td class="acciones">
+                <button class="editar" onclick="editar(${idx})">✏️</button>
+                <button class="borrar" onclick="borrar(${idx})">❌</button>
+            </td>
+        </tr>`;
+    });
+}
+
+function agregar(){
+    let tipo = document.getElementById("tipo").value;
+    let base = parseFloat(document.getElementById("monto").value);
+    if(!base || base<=0) return alert("Monto inválido");
+
+    let ivaP = (tipo==="mano") ? 0 : 19;
+    let iva = base * ivaP / 100;
+    let total = base + iva;
+
+    datos.push({tipo,base,iva,total});
+    guardar();
+    document.getElementById("monto").value="";
+}
+
+function borrar(i){
+    datos.splice(i,1);
+    guardar();
+}
+
+function editar(i){
+    let nuevo = prompt("Nuevo monto:", datos[i].base);
+    if(!nuevo) return;
+    nuevo = parseFloat(nuevo);
+    let ivaP = (datos[i].tipo==="mano") ? 0 : 19;
+    datos[i].base = nuevo;
+    datos[i].iva = nuevo * ivaP / 100;
+    datos[i].total = datos[i].base + datos[i].iva;
+    guardar();
+}
+
+function exportarExcel(){
+    let html=document.querySelector("table").outerHTML;
+    let blob=new Blob([html],{type:'application/vnd.ms-excel'});
+    let a=document.createElement("a");
+    a.href=URL.createObjectURL(blob);
+    a.download="Pagina_de_Luis.xls";
+    a.click();
+}
+
+for(let i=0;i<70;i++){
+    let s=document.createElement("div");
+    s.className="estrella";
+    s.style.left=Math.random()*100+"vw";
+    s.style.animationDuration=(3+Math.random()*5)+"s";
+    estrellas.appendChild(s);
+}
+
+recalcular();
+</script>
+
+</body>
+</html>
